log
Thu, May 15, 2025  7:14:28 PM: 
 tests:  0|5
total_score: 0/70
3f0e54c
Fri, May 16, 2025  1:41:39 AM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  2|4
total_score: 15/70
eabc05b
Sun, May 18, 2025 11:10:37 PM: 
 sudoku.c | 40 ++++++++++++++++++++++++++++++++++++++++
 1 file changed, 40 insertions(+)
 tests:  7|1
total_score: 55/70
8f3c406
Sun, May 18, 2025 11:37:12 PM: 
 sudoku.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  7|1
total_score: 55/70
cb16eee
Sun, May 18, 2025 11:39:51 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'DFS':
sudoku.c:133:35: error: 'current' undeclared (first use in this function)
         List* adj = get_adj_nodes(current);
                                   ^~~~~~~
sudoku.c:133:35: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:137:18: error: 'stack' undeclared (first use in this function)
             push(stack, adj_node);
                  ^~~~~
17c34e5
Sun, May 18, 2025 11:42:19 PM: 
 sudoku.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
Compilation failed
test.c: In function 'DFS':
test.c:245:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
 }
 ^
test.c:262:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
At top level:
test.c:245:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:7:8: error: '_strdup' defined but not used [-Werror=unused-function]
 char * _strdup(const char * str) {
        ^~~~~~~
cc1.exe: all warnings being treated as errors
d77da2d
Sun, May 18, 2025 11:43:03 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
6458930
Sun, May 18, 2025 11:47:07 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
e1c17eb
Sun, May 18, 2025 11:49:03 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|0
total_score: 70/70
42965ab
